--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -20,4 +20,9 @@
         <attr name="name" format="string" />
         <attr name="thumbnail" format="color|reference" />
     </declare-styleable>
+
+    <declare-styleable name="ToggleImageView">
+        <attr name="onSrc" format="color|reference" />
+        <attr name="offSrc" format="color|reference" />
+    </declare-styleable>
 </resources>
