--- a/app/src/main/res/layout/activity_my_order_list_actity.xml
+++ b/app/src/main/res/layout/activity_my_order_list_actity.xml
@@ -74,7 +74,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
-                android:text="已确认"
+                android:text="未付款"
                 android:textSize="16sp" />
 
             <ImageView
