--- a/app/src/main/res/layout/item_my_order_list.xml
+++ b/app/src/main/res/layout/item_my_order_list.xml
@@ -107,15 +107,29 @@
         android:layout_alignTop="@+id/item_info"
         android:layout_centerVertical="true">
 
-        <TextView
-            android:id="@+id/item_count"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:text="店家未确认"
-            android:textSize="10sp" />
+            android:gravity="right"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/item_order_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="4001"
+                android:textSize="10sp" />
+
+            <TextView
+                android:id="@+id/item_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="未付款"
+                android:textSize="10sp" />
+        </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
