--- a/app/src/main/res/layout/item_packge.xml
+++ b/app/src/main/res/layout/item_packge.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/transparent"
     android:orientation="vertical">
 
-    <ImageView
+    <com.naild2d.android.component.MyImageView
         android:id="@+id/item_thumbnail"
         android:layout_width="60dp"
         android:layout_height="60dp"
