--- a/app/src/main/res/layout/partial_package_details_info.xml
+++ b/app/src/main/res/layout/partial_package_details_info.xml
@@ -20,6 +20,7 @@
             app:textSize="16" />
 
         <com.naild2d.android.component.ImageTextView
+            android:id="@+id/pkg_usage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -42,6 +43,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/pkg_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="3"
@@ -68,31 +70,16 @@
         android:paddingBottom="3dp"
         android:paddingTop="3dp">
 
-        <RelativeLayout
+        <com.naild2d.android.component.ImageTextView
+            android:id="@+id/pkg_evaluation_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true">
-
-            <ImageView
-                android:id="@+id/img_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/icon_clock_pink" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
-                android:layout_toRightOf="@+id/img_1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="顾客评价（305）"
-                    android:textColor="@color/dark_pink"
-                    android:textSize="16sp" />
-            </LinearLayout>
-        </RelativeLayout>
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp"
+            app:image="@drawable/icon_clock_pink"
+            app:text="顾客评价（305）"
+            app:textColor="@color/dark_pink"
+            app:textSize="16" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -113,6 +100,7 @@
         android:src="@color/dark_gray" />
 
     <com.naild2d.android.component.ImageTextView
+        android:id="@+id/pkg_shop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
